set up crystal blocks and crystal functions

--- a/gradle.properties
+++ b/gradle.properties
@@ -46,4 +46,7 @@ mod_group_id=yaboichips
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=yaboichips
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=profiler
+mod_description=rougelike
+
+infiniverse_mc_version = infiniverse-1.20.1
+infiniverse_version = 1.0.0.5
