--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,10 @@
 public net.minecraft.client.player.LocalPlayer f_108619_ # minecraft
 public net.minecraft.server.level.ServerLevel f_8549_ # serverLevelData
+public net.minecraft.server.MinecraftServer f_129738_ # executor
+public net.minecraft.server.MinecraftServer f_129744_ # storageSource
+public net.minecraft.server.MinecraftServer f_129756_ # progressListenerFactory
+public net.minecraft.server.MinecraftServer f_129762_ # levels
+public net.minecraft.server.MinecraftServer f_129744_ # storageSource
+public net.minecraft.world.level.border.WorldBorder f_61905_ # listeners
+public net.minecraft.world.level.border.BorderChangeListener$DelegateBorderChangeListener f_61864_ # worldBorder
+public-f net.minecraft.core.RegistryAccess$ImmutableRegistryAccess f_206223_ # registries
