--- a/build.gradle
+++ b/build.gradle
@@ -105,6 +105,14 @@ repositories {
         content {
             includeGroup "curse.maven"
         }
+        maven {
+            name = 'GeckoLib'
+            url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
+            content {
+                includeGroupByRegex("software\\.bernie.*")
+                includeGroup("com.eliotlash.mclib")
+            }
+        }
     }
 }
 
@@ -113,6 +121,8 @@ dependencies {
     implementation fg.deobf("commoble.infiniverse:${infiniverse_mc_version}:${infiniverse_version}")
     implementation fg.deobf("curse.maven:profiler-1108365:6032492")
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+    implementation fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
+    implementation("com.eliotlash.mclib:mclib:20")
 
 }
 
