--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,4 @@
 public net.minecraft.world.SimpleContainer f_19147_ # items
+public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210559_ # rawTemplates
+public net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool f_210560_ # templates
+public-f net.minecraft.world.level.levelgen.WorldOptions f_243816_ # seed
