--- a/src/main/resources/data/rougeplanets/worldgen/placed_feature/sapphire_ore.json
+++ b/src/main/resources/data/rougeplanets/worldgen/placed_feature/sapphire_ore.json
@@ -11,12 +11,12 @@
     {
       "type": "minecraft:height_range",
       "height": {
-        "type": "minecraft:very_biased_to_bottom",
+        "type": "minecraft:biased_to_bottom",
         "max_inclusive": {
-          "absolute": 100
+          "absolute": 0
         },
         "min_inclusive": {
-          "absolute": -63
+          "absolute": -60
         }
       }
     },
